fix play song bug on first load, change cursor to pointer for non-button clickable elements, style guess page, fix spacing

--- a/client/src/style/Room.scss
+++ b/client/src/style/Room.scss
@@ -1,41 +1,45 @@
 @import 'colors';
 
 #room {
-	background-color: $green;
-	color: white;
-	height: 100vh;
+  background-color: $green;
+  color: white;
+  height: 100vh;
 
-	.roomRow {
-		height: 100vh;
+  .roomRow {
+    height: 100vh;
 
-		.roomCol {
-			padding: 0;
-			height: 80%;
+    .roomCol {
+      padding: 0;
+      height: 80%;
 
-			.panel {
-				background-color: $brown;
-				width: 100%;
-				height: 100%;
-				box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.4);
+      .panel {
+        background-color: $brown;
+        width: 100%;
+        height: 100%;
+        box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.4);
+        cursor: pointer;
 
-				
+        &:hover {
+          background-color: white;
+          color: $brown;
+        }
 
-			}
-			.closed {
-				width: 20%;
-			}
+      }
+      .closed {
+        width: 20%;
+      }
 
-			.playerPanel {
-				border-radius: 0px 50px 50px 0px;
-			}
+      .playerPanel {
+        border-radius: 0px 50px 50px 0px;
+      }
 
-			.chatPanel {
-				border-radius: 50px 0px 0px 50px;
-			}
+      .chatPanel {
+        border-radius: 50px 0px 0px 50px;
+      }
 
-			#chatPanelClosed {
-				float: right;
-			}
-		}
-	}
+      #chatPanelClosed {
+        float: right;
+      }
+    }
+  }
 }
