--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -3,42 +3,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Gaegu&display=swap');
 
 html {
-	height: 90vh;
+  height: 90vh;
 
-	body {
-	  font-family: "Gaegu", cursive;
-	  text-align: center;
-	  height: 90vh;
+  body {
+    font-family: "Gaegu", cursive;
+    text-align: center;
+    height: 90vh;
 
-	  #root {
-	  	height: 90vh;
+    #root {
+      height: 90vh;
 
-	  	.formLabel {
-	  		display: block;
-	  		text-align: left;
-	  		margin-top: 10px;
-	  		margin-bottom: 0;
-	  	}
+      .formDropdown {
+        color: $brown;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.7));
+        cursor: pointer;
 
-	  	.mainBtn {
-	  		background-color: white;
-	  		color: $brown;
-	  		border: none;
-	  		border-radius: 25px;
-	  		margin: 5px;
-	  		filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.7));
+      }
 
-	  		&:hover {
-	  			background-color: $brown;
-	  			color: white;
-	  		}
-	  	}
+      .formLabel {
+        display: block;
+        text-align: left;
+        margin-top: 10px;
+        margin-bottom: 0;
+      }
 
-	  	.errorTxt {
-	  		color: $red;
-	  		margin: 0;
-	  	}
-	  }
-	}
+      .btn-main {
+        background-color: $brown;
+        color: white;
+        border: none;
+        border-radius: 25px;
+        margin: 5px;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.7));
+
+        &:hover:not([disabled]) {
+          background-color: white;
+          color: $brown;
+        }
+      }
+
+      .errorTxt {
+        color: $red;
+        margin: 0;
+      }
+
+      .scoreCard {
+        background-color: white;
+        color: $brown;
+        border-radius: 25px;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.7));
+      }
+
+      #ruleTable {
+        background-color: white;
+        border-radius: 25px !important;
+        color: $green;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.7));
+      }
+    }
+  }
 }
 
